# libumem

./: .cvsignore  .gitignore  INSTALL  Makefile.am  README  README-alpha  TODO  configure.ac  envvar.c  getpcstack.c  hello.c  i386_subr_sol.s  init_lib.c  init_stand.c  linktest_stand.c  malloc.c  misc.c  misc.h  sol_compat.h  stand_mapfile  stub_stand.c  test.c  umem.c  umem.h  umem.spec  umem.spec.in  umem_agent_support.c  umem_base.h  umem_fail.c  umem_fork.c  umem_impl.h  umem_test.c  umem_test2.c  umem_test4  umem_update_thread.c  vmem.c  vmem_base.c  vmem_base.h  vmem_mmap.c  vmem_sbrk.c
1.0/: README-alpha  configure.ac  gdb-macros  init_stand.c  stub_stand.c  umem.c  umem_fail.c  umem_test3.c  vmem_stand.c
1.0.1/: autogen.sh  misc.c  sol_compat.h  sparc_subr_sol.s  stand_mapfile
amd64/: umem_genasm.c
sys/: vmem_impl_user.h
